--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,10 @@
 ---
 # tasks file for httpd
-- name: load default variables
-  include_vars:
-    file: default.yml
-
-- name: load os-specific variables
-  include_vars: "{{ item }}"
-  with_first_found:
-    - "{{ ansible_distribution }}.yml"
-    - default.yml
-
 - name: install software
   package:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - "{{ httpd_packages }}"
+    name: "{{ httpd_packages[ansible_distribution]
+          | default(httpd_packages['default'] }}"
+    state: "{{ httpd_package_state }}"
 
 - name: install requirements
   pip:
@@ -37,24 +26,28 @@
 
 - name: create ssl directory
   file:
-    path: "{{ httpd_config_directory }}/ssl"
+    path: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/ssl"
     state: directory
 
 - name: create ssl key
   openssl_privatekey:
-    path: "{{ httpd_config_directory }}/ssl/{{ httpd_ssl_servername }}.key"
+    path: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/ssl/{{ httpd_ssl_servername }}.key"
   register: key
 
 - name: create ssl csr
   openssl_csr:
-    path: "{{ httpd_config_directory }}/ssl/{{ httpd_ssl_servername }}.csr"
+    path: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/ssl/{{ httpd_ssl_servername }}.csr"
     privatekey_path: "{{ key.filename }}"
     common_name: "{{ httpd_ssl_servername }}"
   register: csr
 
 - name: create ssl certificates
   openssl_certificate:
-    path: "{{ httpd_config_directory }}/ssl/{{ httpd_ssl_servername }}.crt"
+    path: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/ssl/{{ httpd_ssl_servername }}.crt"
     privatekey_path: "{{ csr.privatekey }}"
     csr_path: "{{ csr.filename }}"
     provider: selfsigned
@@ -62,14 +55,16 @@
 - name: configure ssl
   template:
     src: ssl.conf.j2
-    dest: "{{ httpd_config_directory }}/ssl.conf"
+    dest: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/ssl.conf"
   notify:
     - restart httpd
 
 - name: configure locations
   template:
     src: location.conf.j2
-    dest: "{{ httpd_config_directory }}/{{ item.name }}.conf"
+    dest: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/{{ item.name }}.conf"
   with_items:
     - "{{ httpd_locations }}"
   notify:
@@ -82,7 +77,8 @@
 - name: configure vhosts
   template:
     src: vhost.conf.j2
-    dest: "{{ httpd_config_directory }}/{{ item.name }}.conf"
+    dest: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/{{ item.name }}.conf"
   with_items:
     - "{{ httpd_vhosts }}"
   notify:
@@ -95,16 +91,16 @@
 - name: configure redirect from http to https
   template:
     src: default_vhost.conf.j2
-    dest: "{{ httpd_config_directory }}/default_vhost.conf"
+    dest: "{{ httpd_config_directory[ansible_distribution]
+          | default(httpd_config_directory['default']) }}/default_vhost.conf"
   notify:
     - restart httpd
 
 - name: start and enable software
   service:
-    name: "{{ item }}"
+    name: "{{ httpd_service[ansible_distribution]
+          | default(httpd_service['default']) }}"
     state: started
     enabled: yes
-  with_items:
-    - "{{ httpd_service }}"
   when:
     - ansible_virtualization_type != "docker"
