--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,10 +8,8 @@
 
 - name: install requirements
   pip:
-    name: "{{ item }}"
+    name: "{{ httpd_requirements }}"
     state: present
-  with_items:
-    - "{{ httpd_requirements }}"
 
 - name: modify selinux settings
   seboolean:
