--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -2,11 +2,17 @@
 - name: Converge
   hosts: all
   gather_facts: false
-  become: true
+
+  vars:
+    httpd_applications:
+      - name: myapplication
+        location: /myapplication
+        backend_url: http://localhost:8080/myapplication
+      - name: myotherapp
+        location: myotherapp
+        backend_url: http://localhost:8080/myotherapp
 
   roles:
-    - role: ansible-role-bootstrap
-
-  tasks:
-    - name: test connection
-      ping:
+    - robertdebock.bootstrap
+    - robertdebock.python_pip
+    - ansible-role-httpd
