--- a/molecule/opensuse-tumbleweed/playbook.yml
+++ b/molecule/opensuse-tumbleweed/playbook.yml
@@ -3,14 +3,16 @@
   hosts: all
   gather_facts: false
 
+  vars:
+    httpd_applications:
+      - name: myapplication
+        location: /myapplication
+        backend_url: http://localhost:8080/myapplication
+      - name: myotherapp
+        location: myotherapp
+        backend_url: http://localhost:8080/myotherapp
+
   roles:
-    - role: robertdebock.bootstrap
-    - role: robertdebock.python_pip
-    - role: ansible-role-httpd
-      httpd_applications:
-        - name: myapplication
-          location: /myapplication
-          backend_url: http://localhost:8080/myapplication
-        - name: myotherapp
-          location: myotherapp
-          backend_url: http://localhost:8080/myotherapp
+    - robertdebock.bootstrap
+    - robertdebock.python_pip
+    - ansible-role-httpd
