--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,12 +6,7 @@ httpd_requirements:
 httpd_sebooleans:
   - httpd_can_network_connect
 
-httpd_binary:
-  default: /usr/sbin/httpd
-  Debian: /usr/sbin/apache2
-  Ubuntu: /usr/sbin/apache2
-
-httpd_packages:
+_httpd_packages:
   default:
     - httpd
     - mod_ssl
@@ -30,13 +25,17 @@ httpd_packages:
   Ubuntu:
     - apache2
 
-httpd_service:
+httpd_packages: "{{ _httpd_packages[ansible_distribution] | default(_httpd_packages['default']) }}"
+
+_httpd_service:
   default: httpd
   Alpine: apache2
   openSUSE Leap: apache2
   openSUSE Tumbleweed: apache2
 
-httpd_config_directory:
+httpd_service: "{{ _httpd_service[ansible_distribution] | default(_httpd_service['default']) }}"
+
+_httpd_config_directory:
   default: /etc/httpd/conf.d
   Alpine: /etc/apache2/conf.d
   Archlinux: /etc/httpd/conf/extra
@@ -45,14 +44,20 @@ httpd_config_directory:
   openSUSE Tumbleweed: /etc/apache2/conf.d
   Ubuntu: /etc/apache2/conf-enabled
 
-httpd_data_directory:
+httpd_config_directory: "{{ _httpd_config_directory[ansible_distribution] | default(_httpd_config_directory['default']) }}"
+
+_httpd_data_directory:
   default: /var/www/html
   Alpine: /var/www/{{ httpd_servername | default(ansible_fqdn) }}
   Archlinux: /src/http
   openSUSE Leap: /src/www/htdocs
   openSUSE Tumbleweed: /src/www/htdocs
 
-httpd_mod_ssl:
+httpd_data_directory: "{{ _httpd_data_directory[ansible_distribution] | default(_httpd_data_directory['default']) }}"
+
+_httpd_mod_ssl:
   default: modules/mod_ssl.so
   Debian: /usr/lib/apache2/modules/mod_ssl.so
   Ubuntu: /usr/lib/apache2/modules/mod_ssl.so
+
+httpd_mod_ssl: "{{ _httpd_mod_ssl[ansible_distribution] | default(_httpd_mod_ssl['default']) }}"
