Same playbook for all tests, updated README.md

--- a/molecule/centos-6/playbook.yml
+++ b/molecule/centos-6/playbook.yml
@@ -1,7 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  gather_facts: false
+  gather_facts: no
+  become: yes
 
   vars:
     httpd_applications:
@@ -14,6 +15,5 @@
 
   roles:
     - robertdebock.bootstrap
-    - robertdebock.epel
     - robertdebock.python_pip
     - ansible-role-httpd
