--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: Robert de Bock
   role_name: httpd
-  description: Provides httpd for your system.
+  description: The purpose of this role is to install and configure httpd on your system.
   license: Apache-2.0
   company: none
   min_ansible_version: 2.4
