--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -91,4 +91,4 @@
     state: started
     enabled: yes
   when:
-    - ansible_virtualization_type != "docker"
+    - ansible_virtualization_type != "docker" or httpd_ignore_docker
