[405] Remote package tasks should have a retry

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,11 +4,17 @@
   package:
     name: "{{ httpd_packages }}"
     state: "{{ httpd_package_state }}"
+  register: httpd_install_apache_httpd
+  until: httpd_install_apache_httpd is succeeded
+  retries: 3
 
 - name: install requirements
   pip:
     name: "{{ httpd_requirements }}"
     state: present
+  register: httpd_install_requirements
+  until: httpd_install_requirements is succeeded
+  retries: 3
 
 - name: modify selinux settings
   seboolean:
