--- a/molecule/centos-latest/playbook.yml
+++ b/molecule/centos-latest/playbook.yml
@@ -1,7 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  gather_facts: false
+  gather_facts: no
+  become: yes
 
   vars:
     httpd_applications:
@@ -11,6 +12,10 @@
       - name: myotherapp
         location: myotherapp
         backend_url: http://localhost:8080/myotherapp
+      - name: fedoraproxy
+        location: fedoraproxy
+        backend_url: http://dl.fedoraproject.org/pub/fedora/linux/
+        remote: http://localhost:3128/
 
   roles:
     - robertdebock.bootstrap
