--- a/molecule/opensuse-tumbleweed/playbook.yml
+++ b/molecule/opensuse-tumbleweed/playbook.yml
@@ -12,6 +12,10 @@
       - name: myotherapp
         location: myotherapp
         backend_url: http://localhost:8080/myotherapp
+      - name: fedoraproxy
+        location: fedoraproxy
+        backend_url: http://dl.fedoraproject.org/pub/fedora/linux/
+        remote: http://localhost:3128/
 
   roles:
     - robertdebock.bootstrap
