--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -91,6 +91,10 @@
   notify:
     - restart httpd
 
+- name: test httpd configuration validity
+  command: httpd -t
+  changed_when: no
+
 - name: start and enable httpd
   service:
     name: "{{ httpd_service }}"
