--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,6 +56,7 @@
     src: ssl.conf.j2
     dest: "{{ httpd_config_directory }}/ssl.conf"
   notify:
+    - test httpd configuration validity
     - restart httpd
 
 - name: configure locations
@@ -65,6 +66,7 @@
   with_items:
     - "{{ httpd_locations }}"
   notify:
+    - test httpd configuration validity
     - restart httpd
   when:
     - httpd_locations is defined
@@ -78,6 +80,7 @@
   with_items:
     - "{{ httpd_vhosts }}"
   notify:
+    - test httpd configuration validity
     - restart httpd
   when:
     - httpd_vhosts is defined
@@ -89,11 +92,8 @@
     src: default_vhost.conf.j2
     dest: "{{ httpd_config_directory }}/default_vhost.conf"
   notify:
+    - test httpd configuration validity
     - restart httpd
-
-- name: test httpd configuration validity
-  command: httpd -t
-  changed_when: no
 
 - name: start and enable httpd
   service:
