"cmd": "httpd -t", "msg": "[Errno 2] No such file or directory"

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for httpd
 - name: test httpd configuration validity
-  command: httpd -t
+  command: "{{ httpd_binary }} -t"
   changed_when: no
 
 - name: restart httpd
