--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,4 +9,4 @@
     name: "{{ httpd_service }}"
     state: restarted
   when:
-    - ansible_virtualization_type != "docker" or httpd_ignore_docker
+    - ansible_virtualization_type != "docker"
