--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -101,4 +101,4 @@
     state: started
     enabled: yes
   when:
-    - ansible_virtualization_type != "docker" or httpd_ignore_docker
+    - ansible_virtualization_type != "docker"
