--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -1,5 +1,5 @@
 ---
-- name: Converge
+- name: Prepare
   hosts: all
   gather_facts: no
   become: yes
@@ -25,6 +25,6 @@
 
   roles:
     - robertdebock.bootstrap
+    - robertdebock.epel
     - robertdebock.buildtools
     - robertdebock.python_pip
-    - ansible-role-httpd
