--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,19 +1,19 @@
 ---
 # tasks file for httpd
-- name: install apache httpd
-  package:
-    name: "{{ httpd_packages }}"
-    state: present
-  register: httpd_install_apache_httpd
-  until: httpd_install_apache_httpd is succeeded
-  retries: 3
-
 - name: install requirements
   pip:
     name: "{{ httpd_requirements }}"
     state: present
   register: httpd_install_requirements
   until: httpd_install_requirements is succeeded
+  retries: 3
+
+- name: install apache httpd
+  package:
+    name: "{{ httpd_packages }}"
+    state: present
+  register: httpd_install_apache_httpd
+  until: httpd_install_apache_httpd is succeeded
   retries: 3
 
 - name: modify selinux settings
@@ -108,22 +108,21 @@
     - test httpd configuration validity
     - restart httpd
 
+- name: configure listening ports
+  template:
+    src: "{{ httpd_ports_conf }}.j2"
+    dest: "{{ httpd_server_root }}/{{ httpd_ports_conf }}"
+  notify:
+    - test httpd configuration validity
+    - restart httpd
+  when:
+    - ansible_os_family == "Debian"
+    - ansible_os_family == "Suse"
+
 - name: configure redirect from http to https
   template:
     src: default_vhost.conf.j2
     dest: "{{ httpd_config_directory }}/default_vhost.conf"
-  notify:
-    - test httpd configuration validity
-    - restart httpd
-
-- name: remove specific configurations.
-  file:
-    path: "{{ httpd_config_directory }}/{{ item }}"
-    state: absent
-  with_items:
-    - autoindex.conf
-    - userdir.conf
-    - welcome.conf
   notify:
     - test httpd configuration validity
     - restart httpd
