--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ language: python
 services: docker
 
 env:
-  - ansible_version="ansible>=2.7,<2.8"
-  - ansible_version="ansible"
-  - ansible_version="git+https://github.com/ansible/ansible.git@devel"
   - image="alpine:edge"
   - image="alpine:latest"
   - image="archlinux/base"
@@ -18,6 +15,10 @@ env:
   - image="opensuse/leap"
   - image="robertdebock/docker-ubuntu-systemd:latest"
   - image="robertdebock/docker-ubuntu-systemd:devel"
+  matrix:
+    - ansible_version="ansible>=2.7,<2.8"
+    - ansible_version="ansible"
+    - ansible_version="git+https://github.com/ansible/ansible.git@devel"
 
 matrix:
   allow_failures:
