--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,27 @@
 ---
 language: python
-services: docker
+services:
+  - docker
 
 env:
-  - image="alpine:edge"
-  - image="alpine:latest"
-  - image="archlinux/base"
-  - image="robertdebock/docker-centos-systemd:7"
-  - image="robertdebock/docker-centos-systemd:latest"
-  - image="robertdebock/docker-debian-systemd:stable"
-  - image="robertdebock/docker-debian-systemd:unstable"
-  - image="robertdebock/docker-fedora-systemd:latest"
-  - image="robertdebock/docker-fedora-systemd:rawhide"
-  - image="opensuse/leap"
-  - image="robertdebock/docker-ubuntu-systemd:latest"
-  - image="robertdebock/docker-ubuntu-systemd:devel"
-  matrix:
-    - ansible_version="ansible>=2.7,<2.8"
-    - ansible_version="ansible"
-    - ansible_version="git+https://github.com/ansible/ansible.git@devel"
-
-matrix:
-  allow_failures:
-    - env: image="alpine:edge"
-    - env: image="robertdebock/docker-debian-systemd:unstable"
-    - env: image="robertdebock/docker-fedora-systemd:rawhide"
-    - env: image="robertdebock/docker-ubuntu-systemd:devel"
-    - env: ansible_version="git+https://github.com/ansible/ansible.git@devel"
+  - distribution: "alpine:latest"
+  - distribution: "archlinux/base"
+  - distribution: "robertdebock/docker-centos-systemd:7"
+  - distribution: "robertdebock/docker-centos-systemd:latest"
+  - distribution: "robertdebock/docker-debian-systemd:stable"
+  - distribution: "robertdebock/docker-fedora-systemd:latest"
+  - distribution: "opensuse/leap"
+  - distribution: "robertdebock/docker-ubuntu-systemd:latest"
 
 cache:
   - pip
 
 install:
   - pip install --upgrade pip
-  - pip install "${ansible_version}"
-  - pip install molecule
-  - pip install docker
+  - pip install tox-travis
 
 script:
-  - molecule test
+  - tox
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
