Remove 2.9/devel and add a standard command for all.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ services:
 
 env:
   - distribution: "alpine:latest"
-    command: "sh -c \"while true ; do sleep 1 ; done\""
   - distribution: "archlinux/base"
   - distribution: "robertdebock/docker-centos-systemd:7"
   - distribution: "robertdebock/docker-centos-systemd:latest"
@@ -22,6 +21,7 @@ install:
   - pip install tox-travis
 
 script:
+  - tox -l
   - tox
 
 notifications:
