--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,13 @@
 [tox]
-# minversion = 1.8
-
-envlist = ansible-{previous,current,next}
+minversion = 1.8
+envlist = ansible-{2.7,2.8}
 skipsdist = true
 
 [testenv]
 passenv = *
 deps =
     -rrequirements.txt
-    previous: ansible>=2.7
-    current: ansible>=2.8
-    next: ansible=>2.9
-
-commands = molecule test
+    2.7: ansible>=2.7
+    2.8: ansible>=2.8
+commands =
+    molecule test
