--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-minversion = 1.8
-envlist = ansible-{2.7,2.8}
+minversion = 3.7
+envlist = py{2.7,3.7}-ansible-{2.7,2.8}
+
 skipsdist = true
 
 [testenv]
@@ -11,3 +12,6 @@ deps =
     2.8: ansible>=2.8
 commands =
     molecule test
+setenv =
+    TOX_ENVNAME={envname}
+    MOLECULE_EPHEMERAL_DIRECTORY=/tmp/{envname}
