--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,13 @@
 [tox]
 minversion = 3.7
-envlist = ansible-{2.7,2.8}
-
+envlist = py{27}_ansible-{27,28}
 skipsdist = true
 
 [testenv]
-passenv = *
 deps =
     -rrequirements.txt
-    2.7: ansible>=2.7
-    2.8: ansible>=2.8
+    27: ansible>=2.7
+    28: ansible>=2.8
 commands =
     molecule test
 setenv =
