--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,11 @@ cache:
 
 install:
   - pip install --upgrade pip
+  - pip install molecule
   - pip install tox
 
 script:
-  - tox --listenvs
-  - tox
+  - tox --parallel all
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
