--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,5 +17,9 @@ provisioner:
   playbooks:
     prepare: prepare.yml
     converge: playbook.yml
+  inventory:
+    group_vars:
+      all:
+        ansible_python_interpreter: /usr/bin/python3
 scenario:
   name: default
