--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
 minversion = 3.7
-envlist = py{27}-ansible-{27,28}
+envlist = py{27}-ansible-{previous,current,next}
 skipsdist = true
 
 [testenv]
 deps =
-    -rrequirements.txt
-    27: ansible>=2.7
-    28: ansible>=2.8
+    previous: ansible~=2.7.0
+    current: ansible~=2.8.0
+    next: git+https://github.com/ansible/ansible.git@devel
+    docker
+    molecule
 commands =
     molecule test
 setenv =
