--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,26 @@ services:
 
 env:
   - distribution: "alpine:latest"
+  - distribution: "alpine:edge"
   - distribution: "archlinux/base"
   - distribution: "robertdebock/docker-centos-systemd:7"
   - distribution: "robertdebock/docker-centos-systemd:latest"
+  - distribution: "robertdebock/docker-debian-systemd:latest"
   - distribution: "robertdebock/docker-debian-systemd:stable"
+  - distribution: "robertdebock/docker-debian-systemd:unstable"
   - distribution: "robertdebock/docker-fedora-systemd:latest"
+  - distribution: "robertdebock/docker-fedora-systemd:rawhide"
   - distribution: "opensuse/leap"
   - distribution: "robertdebock/docker-ubuntu-systemd:latest"
+  - distribution: "robertdebock/docker-ubuntu-systemd:devel"
+  - distribution: "robertdebock/docker-ubuntu-systemd:rolling"
+
+matrix:
+  allow_failures:
+    - env: distribution="alpine:edge"
+    - env: distribution="robertdebock/docker-debian-systemd:unstable"
+    - env: distribution="robertdebock/docker-fedora-systemd:rawhide"
+    - env: distribution="robertdebock/docker-ubuntu-systemd:devel"
 
 cache:
   - pip
