--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ env:
     - distribution="robertdebock/docker-ubuntu-systemd:latest"
     - distribution="robertdebock/docker-ubuntu-systemd:devel"
     - distribution="robertdebock/docker-ubuntu-systemd:rolling"
+
+matrix:
   allow_failures:
     - env: distribution="alpine:edge"
     - env: distribution="robertdebock/docker-debian-systemd:unstable"
