--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ cache:
 install:
   - pip install --upgrade pip
   - pip install molecule
-  - pip install tox
+  - pip install tox-travis
 
 script:
   - tox --parallel all
