--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,4 +1,7 @@
 ---
+#
+# Ansible managed
+#
 repository:
   description: Install and configure httpd on your system.
   homepage: https://robertdebock.nl/
